--- a/readme.textile
+++ b/readme.textile
@@ -4,15 +4,14 @@ This is a sample rails app for serving event data in JSON format.
 
 To download the code, type the following git command in terminal:
 
-@git clone git@github.com:neilang/EventsFeed.git@
+bc. git clone git@github.com:neilang/EventsFeed.git
 
 This will copy the code from the repository to your computer.
 
 To run the application, @cd@ into the downloaded directory and type:
 
-@rake db:migrate@
+bc. rake db:migrate
+rails s
 
-@rails s@
-
-This will serve the application at http://localhost:3000/
+This will serve the application at @http://localhost:3000/@
 
